examples/kustomize/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "token-login"
spec:
  ports:
    - name: admin
      port: 8080

  selector:
    kind: "token-login"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "token-login"
spec:
  replicas: 1
  selector:
    matchLabels:
      kind: "token-login"
  template:
    metadata:
      labels:
        kind: "token-login"
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      restartPolicy: Always
      enableServiceLinks: false
      containers:
        - name: "token-login"
          image: "ghcr.io/reddec/token-login:latest"

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ "ALL" ]
          ports:
            # for web UI
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 8Mi
